fix(04-testing-ci): fix various bugs with tests and coverage reporting